--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
+    <h1>Hello world</h1>
     <ul>
       <li>sazamtro</li>
       <li>vashli</li>
