--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Hello world</h1>
     <ul>
-      <li>sazamtro</li>
-      <li>vashli</li>
-      <li>msxali</li>
+      <li class="colourOne">sazamtro</li>
+      <li class="colourTwo">vashli</li>
+      <li class="colourThree">msxali</li>
     </ul>
   </body>
 </html>
