--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Hello world</h1>
-    <ul>
+    <ul class="container">
       <li class="colourOne">sazamtro</li>
       <li class="colourTwo">vashli</li>
       <li class="colourThree">msxali</li>
